Changed collapsed property to expanded
This is to make it more descriptive and easy to relate with

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,2 @@
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
-<app-body [collapsed]="isSideNavCollapsed" [screenWidth]="screenWidth"></app-body>
+<app-body [expanded]="isSideNavExpanded" [screenWidth]="screenWidth"></app-body>
