Added the header component with some styles

--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -1,2 +1,3 @@
 <app-sidenav (onToggleSideNav)="onToggleSideNav($event)"></app-sidenav>
+<app-header [expanded]="isSideNavExpanded" [screenWidth]="screenWidth"></app-header>
 <app-body [expanded]="isSideNavExpanded" [screenWidth]="screenWidth"></app-body>
