Completed the header component
This was done in order after the update to allow the use of menu from lastest version of angular cdk

--- a/src/app/dashboard/dashboard.component.html
+++ b/src/app/dashboard/dashboard.component.html
@@ -6,3 +6,27 @@
         Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia neque repellendus aspernatur necessitatibus officiis eius. Eligendi cumque, sunt explicabo provident architecto eveniet modi debitis velit, nisi non a saepe.
     </div>
 </div>
+<div class="card">
+    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia neque repellendus aspernatur necessitatibus officiis eius. Eligendi cumque, sunt explicabo provident architecto eveniet modi debitis velit, nisi non a saepe.
+    </div>
+</div>
+<div class="card">
+    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia neque repellendus aspernatur necessitatibus officiis eius. Eligendi cumque, sunt explicabo provident architecto eveniet modi debitis velit, nisi non a saepe.
+    </div>
+</div>
+<div class="card">
+    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia neque repellendus aspernatur necessitatibus officiis eius. Eligendi cumque, sunt explicabo provident architecto eveniet modi debitis velit, nisi non a saepe.
+    </div>
+</div>
+<div class="card">
+    <div class="card-head">Lorem ipsum - dashboard</div>
+    <div class="card-body">
+        Lorem ipsum dolor sit amet consectetur adipisicing elit. Nulla officia neque repellendus aspernatur necessitatibus officiis eius. Eligendi cumque, sunt explicabo provident architecto eveniet modi debitis velit, nisi non a saepe.
+    </div>
+</div>
