--- a/src/app/header/header.component.html
+++ b/src/app/header/header.component.html
@@ -2,9 +2,17 @@
     <div class="head-content">
         <div class="head-content-left">
             <div class="search-container">
-                <div class="normal-search">
+                <div *ngIf="!canShowSearchAsOverlay" class="normal-search">
                     <input type="search" class="search" placeholder="Search..." name="" id="">
                     <i class="far fa-search search-icon"></i>
+                </div>
+                <div *ngIf="canShowSearchAsOverlay">
+                    <button 
+                        [cdkMenuTriggerFor]="searchOverlay"
+                        class="search-menu-btn ripple"
+                    >
+                        <i class="far fa-search search-icon"></i>
+                    </button>
                 </div>
             </div>
         </div>
@@ -12,8 +20,8 @@
         <div class="head-content-right">
             <div class="head-menu">
                 <div class="head-menu-item">
-                    <button class="head-menu-item-btn ripple">
-                        <img [src]="'assets/flags/us.jpg'" class="flag" alt="flag">
+                    <button class="head-menu-item-btn ripple" [cdkMenuTriggerFor]="languageOverlay">
+                        <img [src]="'assets/flags/' + selectedLanguage.flag + '.jpg'" class="flag" alt="flag">
                     </button>
                 </div>
                 <div class="head-menu-item">
@@ -22,7 +30,7 @@
                     </button>
                 </div>
                 <div class="head-menu-item">
-                    <button class="head-menu-item-btn ripple">
+                    <button class="head-menu-item-btn ripple" [cdkMenuTriggerFor]="noficationOverlay">
                        <i class="far fa-bell menu-icon"></i>
                     </button>
                 </div>
@@ -33,7 +41,7 @@
                 </div>
             </div>
             <div class="head-user-avatar-container">
-                <div class="head-user-avatar">
+                <div class="head-user-avatar" [cdkMenuTriggerFor]="userOverlay">
                     <img [src]="'assets/user3.jpg'" alt="" class="user-avatar">
                     <div class="circle-indicator pulse"></div>
                 </div>
@@ -41,3 +49,64 @@
         </div>
     </div>
 </div>
+
+<ng-template #searchOverlay>
+    <div class="overlay overlay-search overlay-fall" cdkMenu>
+        <input type="search" class="search" placeholder="Search..." name="" id="">
+        <button class="search-btn">
+            <i class="far fa-search search-icon"></i>
+        </button>
+    </div>
+</ng-template>
+
+<ng-template #languageOverlay>
+    <div class="overlay overlay-language overlay-fall" cdkMenu>
+        <ul>
+            <li *ngFor="let lang of languages">
+                <img [src]="'assets/flags/' + lang.flag + '.jpg'" alt="flag">
+                <span>{{lang.language}}</span>
+            </li>
+        </ul>
+    </div>
+</ng-template>
+
+<ng-template #noficationOverlay>
+    <div class="overlay overlay-notification overlay-fall" cdkMenu>
+        <ul>
+            <li class="notification-head-container">
+                <div class="notification-head">Notification</div>
+                <span class="view-all-link">
+                    <a>View All</a>
+                </span>
+            </li>
+            <li 
+                class="notification-message-container" 
+                *ngFor="let notification of notifications"
+                cdkMenuItem
+            >
+                <i [class]="notification.icon"></i>
+                <div>
+                    <div class="notification-subject">
+                        {{notification.subject}}
+                    </div>
+                    <p class="notification-desc">
+                        {{notification.description}}
+                    </p>
+                </div>
+            </li>
+        </ul>
+    </div>
+</ng-template>
+
+<ng-template #userOverlay>
+    <div class="overlay overlay-user overlay-fall" cdkMenu>
+        <ul>
+            <li *ngFor="let item of userItems" cdkMenuItem>
+                <a>
+                    <i class="icon" [ngClass]="item.icon"></i>
+                    <span>{{item.label}}</span>
+                </a>
+            </li>
+        </ul>
+    </div>
+</ng-template>
