--- a/src/app/header/header.component.scss
+++ b/src/app/header/header.component.scss
@@ -42,6 +42,23 @@
                         color: #74788d;
                     }
                 }
+
+                .search-menu-btn {
+                    font-size: 18px;
+                    height: 42px;
+                    width: 42px;
+                    cursor: pointer;
+                    border: 1px solid transparent;
+                    border-radius: 50%;
+                    outline: 0;
+                }
+
+                .search-menu-btn:hover,
+                .search-menu-btn:focus {
+                    .search-icon {
+                        color: #699dfa;
+                    }
+                }
             }
         }
 
@@ -76,7 +93,7 @@
 
                     .head-menu-item-btn:hover,
                     .head-menu-item-btn:focus {
-                        background: #eff2f3;
+                        // background: #eff2f3;
 
                         .menu-icon {
                             color: #699dfa;
@@ -137,3 +154,175 @@
         box-shadow: 0 0 0 13px rgba(17, 64, 126, 0);
     }
 }
+
+@keyframes fall {
+    0% {
+        transform: scaleY(0);
+    }
+    100% {
+        transform: scaleY(1);
+    }
+}
+
+.overlay {
+    background: #fff;
+    margin-top: 10px;
+    box-shadow: 0 1rem 3rem rgb(0 0 0 /13%);
+    border-radius: 0.25rem;
+}
+
+.overlay-fall {
+    animation: fall 300ms ease-in-out forwards;
+    transform-origin: top center;
+}
+
+.overlay-search {
+    padding: 1rem;
+    display: flex;
+
+    .search {
+        padding: 0.47rem 0.75rem;
+        font-size: 0.8125rem;
+        font-weight: 400;
+        line-height: 1.5;
+        color: #495057;
+        background-color: #fff;
+        background-clip: padding-box;
+        border: 1px solid #ced4da;
+        outline: none;
+        border-radius: 0.25rem;
+    }
+
+    .search-btn {
+        color: #fff;
+        background-color: #699dfa;
+        cursor: pointer;
+        border: 1px solid transparent;
+        padding: 0.47rem 0.75rem;
+        border-radius: 0.25rem;
+    }
+}
+
+.overlay-language {
+    padding: 0.5rem 0;
+
+    ul {
+        list-style: none;
+        width: 10rem;
+
+        li {
+            padding: 0.35rem 1.5rem;
+            font-size: 14px;
+            font-weight: 400;
+            color: #495057;
+            cursor: pointer;
+
+            img {
+                margin-right: 0.6rem;
+                height: 12px;
+            }
+        }
+
+        li:hover {
+            background: #eff2f3;
+        }
+    }
+}
+
+.overlay-notification {
+    ul {
+        list-style: none;
+        width: 320px;
+
+        li {
+            padding: 1rem;
+
+            &.notification-head-container {
+                display: flex;
+                align-items: center;
+                justify-content: space-between;
+
+                .notification-head {
+                    font-size: 15px;
+                    color: #495057;
+                }
+
+                .view-all-link {
+                    font-size: 80%;
+                    color: #699dfa;
+                    cursor: pointer;
+                }
+            }
+
+            &.notification-message-container {
+                cursor: pointer;
+                display: flex;
+
+                i {
+                    margin-right: 15px;
+                    font-size: 20px;
+                    color: #699dfa;
+                    width: 25px;
+                    text-align: center;
+                }
+
+                .notification-subject {
+                    margin-bottom: 0.25rem;
+                    font-size: 15px;
+                    color: #495057;
+                }
+
+                .notification-desc {
+                    font-size: 12px;
+                    color: #74788d;
+                }
+
+                &:hover {
+                    background: #eff2f3;
+                }
+            }
+        }
+    }
+}
+
+.overlay-user {
+    ul {
+        padding: 0.5rem 0;
+        list-style: none;
+        width: 10rem;
+
+        li {
+            padding: 0.35rem 1.5rem;
+            font-size: 14px;
+            font-weight: 400;
+            color: #495057;
+            cursor: pointer;
+
+            .icon {
+                margin-right: 0.6rem;
+            }
+        }
+
+        li:hover {
+            background: #eff2f3;
+        }
+    }
+}
+
+.ripple {
+    background-position: center;
+    background-color: #fff;
+    transition: background 0.8s;
+
+    &:hover, 
+    &:focus {
+        background: #eff2f3 radial-gradient(circle, transparent 1%, #eff2f3 1%) center/15000%;
+    }
+
+    &:active {
+        background-color: #bec2c4;
+        background-size: 100%;
+        transition: background 0s;
+    }
+}
+
